--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ theme: jekyll-theme-chirpy
 
 # Change the following value to '/PROJECT_NAME' ONLY IF your site type is GitHub Pages Project sites
 # and doesn't have a custom domain.
-baseurl: '/blog'
+baseurl: ""
 
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
@@ -23,7 +23,7 @@ timezone: Europe/Madrid
 
 title: MikeMightHack                         # the main title
 
-tagline: Pentetration Tester, OSCP, CRTO   # it will display as the sub-title
+tagline: Pentetration Tester, OSCP, CRTO, CRTL   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   My personal Blog. I will post here some interesting things about cybersecurity and technologies.
